Fixed alignment in graphical representation

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -271,7 +271,7 @@ div.help {
   padding-bottom: 10px
 }
 
-div.large_div {
+div.large_div, #graphical {
   max-height: 400px;
   overflow: auto;
 }
